# glitchygames

./: .gitignore  .pre-commit-config.yaml  .safety-project.ini  .yamllint  404.html  ANIMATION_README.md  API_README.md  BITMAPPY_ARCHITECTURE.md  CLAUDE.md  CONTROLLER_CONTROLS_README.md  LICENSE  LOADER_README.md  MANIFEST.in  README.md  TEST_UPDATE_PLAN.md  adventuretale.py  bitmappy.py  check_dependencies.py  debug_launcher.py  engine.py  fix_common_issues.py  index.html  mkdocs.yml  noxfile.py  objects.inv  paddleslap.py  pyproject.toml  pyrightconfig.json  requirements.txt  search.html  setup.cfg  setup.py  sitemap.xml  sprite_loader.py  test_glitchygames.py  test_transparency_fix.py  tox.ini  vulture_whitelist.py  wily.cfg
.benchmarks/Darwin-CPython-3.13-64bit/: 0001_baseline.json  0002_baseline.json  0003_baseline.json  0004_baseline.json  0005_baseline.json  0006_baseline.json  0007_baseline.json  0008_baseline.json  0009_baseline.json  0010_baseline.json  0011_baseline.json  0012_baseline.json  0013_baseline.json  0014_baseline.json  0015_baseline.json  0016_baseline.json  0017_baseline.json  0018_baseline.json  0019_baseline.json  0020_baseline.json  0021_baseline.json
.circleci/: config.yml
.claude/commands/: mr.md
.cursor/: index.mdc
.cursor/rules/: tests.mdc
about/: index.html
demo/: paddleslap.py
docs/: index.md  multi_controller_system.md
docs/architecture/: argument_system.md  bitmappy.md  event_system.md
docs/glitchygames/: index.md
docs/js/: mermaid-init.js
docs/quality/: complexity.md
examples/: bitrot_adventures.py  simple_game.py  ui_demo.py
ghetto/: color.py  engine.py
ghettogames/: __init__.py  audio.py  color.py  engine.py  events.py  fonts.py  joysticks.py  keyboard.py  midi.py  mouse.py  music.py  pixels.py  scenes.py  sounds.py  sprites.py  ui.py
ghettogames/color/: __init__.py  palette.py
ghettogames/examples/: adventuretale.py  joystick_demo.py  paddleslap.py
glitchygames/: __init__.py  api.py  camera.py  christmas_tree.spr  engine.py  fonts.py  hi.spr  index.html  ini.py  ini.spr  interfaces.py  pixels.py  save.spr  scenes.py  sprite.spr  sprites.py  thingy.spr  timing.py  ui.py  yaml.spr
glitchygames/ai/: INTEGRATION.md  README.md  __init__.py  sprite_generator.py
glitchygames/animation/: __init__.py  expressions.py  scheduler.py  state_machine.py
glitchygames/api/: __init__.py  client.py  dependencies.py  index.html  main.py
glitchygames/assets/: eraser.toml  raspberry.toml
glitchygames/audio/: __init__.py  controller_audio.py  tts.py  voice_assistant.py
glitchygames/bitmappy/: __init__.py  ai_integration.py  ai_manager.py  ai_worker.py  alpha.py  animated_canvas.py  bitmappy_multi_controller_enhancements.py  canvas_interfaces.py  constants.py  controller_handler.py  controller_mode_system.py  editor.py  editor_setup.py  file_io.py  film_strip.py  film_strip_animation.py  film_strip_coordinator.py  film_strip_events.py  film_strip_layout.py  film_strip_rendering.py  film_strip_sprite.py  frame_operations.py  models.py  multi_controller_performance.py  onion_skinning.py  pixel_ops.py  pixel_sprite.py  protocols.py  scroll_arrow.py  slider_manager.py  sprite_inspection.py  toml_processing.py  utils.py
glitchygames/collision/: __init__.py  detection.py  layers.py
glitchygames/color/: __init__.py  constants.py  index.html  palette.py
multi_controller_system/: index.html
reference/: index.html
reference.old/: index.foo
resources/: countertop_tile10_32.raw  countertop_tile1_32.raw  countertop_tile2_32.raw  countertop_tile3_32.raw  countertop_tile4_32.raw  countertop_tile5_32.raw  countertop_tile6_32.raw  countertop_tile7_32.raw  countertop_tile8_32.raw  countertop_tile9_32.raw  daubwall_tile10_32.raw  daubwall_tile11_32.raw  daubwall_tile12_32.raw  daubwall_tile13_32.raw  daubwall_tile14_32.raw  daubwall_tile15_32.raw  daubwall_tile1_32.raw  daubwall_tile2_32.raw  daubwall_tile3_32.raw  daubwall_tile4_32.raw  daubwall_tile5_32.raw  daubwall_tile6_32.raw  daubwall_tile7_32.raw  daubwall_tile8_32.raw  daubwall_tile9_32.raw  floor_tile1.raw  floor_tile10_32.raw  floor_tile11_32.raw  floor_tile12_32.raw  floor_tile13_32.raw  floor_tile14_32.raw  floor_tile15_32.raw  floor_tile16_32.raw  floor_tile17_32.raw  floor_tile2_32.raw  floor_tile3_32.raw  floor_tile4_32.raw  floor_tile5_32.raw  floor_tile6_32.raw  floor_tile7_32.raw  (+14 more)
scripts/: MySpriteFormat.ini  ai_query_inspector.py  animated.toml  animation.toml  animation_demo.py  animation_scene_demo.py  animation_scene_full_demo.py  audit_hitboxes.py  bar.ini  basic.py  bitmappy  bitmappy_entry.py  bitrotadventures.py  cached_fonts.py  compound_sprite.py  convert_ini_to_toml.py  create.py  debugapp  debugapp.py  foo.ini  foo.toml  gen_ref_pages.py  generate_complexity_graphs.py  legacy_sprite_loader.py  raw_sprite_loader.py  show_ai_query.py  sprite_loader.py  sprite_stack.py  sprites  test_sprite_stack.py
search/: search_index.json
source/: conf.py
tests/: __init__.py  conftest.py  test_animated_canvas.py  test_animated_sprite_glyphs.py  test_animated_sprites.py  test_animation_hardware.py  test_animation_system_audit.py  test_animation_timing.py  test_animation_visual.py  test_camera.py  test_canvas_interfaces.py  test_character_limit_enforcement.py  test_color_coverage.py  test_color_palette_coverage.py  test_controller_hotplug_debug.py  test_controller_simple.py  test_engine.py  test_engine_comprehensive.py  test_engine_coverage.py  test_engine_event_system.py  test_engine_simple.py  test_events_comprehensive.py  test_events_coverage.py  test_events_missing_coverage.py  test_events_missing_coverage_comprehensive.py  test_events_simple.py  test_example_sprites.py  test_examples_sprites.py  test_film_strip_canvas_sync.py  test_film_strip_frame_addition.py  test_fonts_coverage.py  test_game_objects_basic.py  test_game_objects_coverage.py  test_game_objects_simple.py  test_hypothesis_properties.py  test_interfaces_coverage.py  test_legacy_sprite_glyphs.py  test_logging.py  test_mock_factory.py  test_mouse_events.proto  (+44 more)
tools/: bitmappy.py
(+868 files in other folders)
