[project]
name = "glitchygames"
version = "1.0.0"
description = "Glitchy Games and Tools for Pygame and Python 3"
authors = [
    {name = "Terry Simons", email = "terry.simons@gmail.com"},
    {name = "Rich Saupe", email = "sabadam32@gmail.com"},
]
maintainers = [
    {name = "Terry Simons", email = "terry.simons@gmail.com"},
    {name = "Rich Saupe", email = "sabadam32@gmail.com"},
]
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
]
dependencies = [
    "tomli-w",
    "pygame-ce",
    "cookiecutter",
    "pyperclip",
    "aisuite[all]",
    "numpy",
    "miniaudio",
    "speechrecognition",
]

[project.urls]
"Bug Tracker" = "https://github.com/terrysimons/glitchygames/issues/"
"Homepage" = "https://glitchygames.ai/"
"Documentation" = "https://glitchygames.ai/documentation/"
"Repository" = "https://github.com/terrysimons/glitchygames"

[project.scripts]
bitmappy = "glitchygames.tools.bitmappy:main"
glitchygames-server = "glitchygames.api.main:run"
glitchygames-client = "glitchygames.api.client:run"

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocstrings[crystal,python]",
    "mkdocs-material",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
    "pymdown-extensions",
    "mkdocs-autorefs",
    "mkdocs-macros-plugin",
    "mkdocstrings-python",
]
dev = [
    "nox[uv]",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytest-benchmark",
    "pytest-mock",
    "coverage",
    "bandit",
    "safety",
    "ruff",
    "pre-commit",
    "pyright",
    "pillow",
]
api = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "httpx",
    "apng",
    "pillow",
]

[tool.hatch.build.targets.wheel]
packages = ["glitchygames"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Exclude examples directory from test collection
norecursedirs = ["examples", "build", "dist", "*.egg-info", ".git", "__pycache__"]
addopts = "--cov=glitchygames --cov-report=term-missing --cov-report=html --cov-fail-under=80"
# Note: All tests run with no_unhandled_events=True to catch unhandled events as bugs

[tool.coverage.run]
source = ["glitchygames"]
omit = [
    "*/tests/*",
    "*/examples/*",
    "*/build/*",
    "*/dist/*",
    "*/__pycache__/*",
    "*/migrations/*"
]

[tool.coverage.report]
show_missing = true

exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
preview = true
line-length = 100
output-format = "grouped"
src = ["glitchygames", "tests", "scripts"]
lint.task-tags = ["HACK", "TODO", "FIXME", "XXX", "NOTE", "BUG", "OPTIMIZE", "WIP"]
lint.select = ["ALL"]
lint.ignore = [
  # --- Previously ignored ---
  #"ASYN",
  "FIX002", # Line contains TODO, consider resolving the issue
  "SLF001", # Private member accessed (Needed for some annotations, like argparse._ArgumentGroup)
  "S311", # Standard pseudo-random generators are not suitable for security/cryptographic purposes.
  "COM812", # Trailing comma missing
  "G004", # Logging statement uses f-string
  "ISC002", # Use of implicit string concatenation
  "ERA001", # Found commented-out code
  "PLR0911", # Too many return statements
  "C901", # Function is too complex
  "EM102", # Exception must not use an f-string literal, assign to variable first
  "TRY003", # Avoid specifying long messages outside the exception class
  "ARG002", # Unused method argument
  "TD003", # Missing issue link on the line following this TODO
  "PLR0913", # Too many arguments to function call
  "TD002", # Missing author in TODO
  "PLR0917", # Too many positional arguments
  "PLR0904", # Too many public methods
  "CPY001", # Missing copyright notice at top of file
  "B019",  # Use of `functools.lru_cache` or `functools.cache` on methods can lead to memory leaks
  "EM101", # Exception must not use a string literal, assign to variable first
  "ISC001", # Use of implicit string concatenation (this conflicts with ruff format)
  "D203", # Incorrect blank line before class (conflicts with D211)
  "D213", # Multi-line summary second line (conflicts with D212)
  "TRY300", # Consider moving this statement to an `else` block
  "PLR6301", # Method could be a function/staticmethod
  "PLC0415", # import-outside-top-level (intentional: circular imports, optional deps, platform-specific)
]
lint.fixable = [
  "I001",   # import-sort
  "Q000",   # quote style
  "EXE001", # shebang-not-executable
  "D200",   # unnecessary-multiline-docstring
  "D205",   # missing-blank-line-after-summary
  "D413",   # missing-blank-line-after-last-section
  "F541",   # f-string-missing-placeholders
  "UP006",  # non-pep585-annotation (List -> list)
  "UP035",  # deprecated-import
  "UP045",  # non-pep604-annotation-optional (Optional -> X | None)
  "UP015",  # redundant-open-modes
  "UP037",  # quoted-annotation
  "UP008",  # super-call-with-parameters
  "UP043",  # unnecessary-default-type-args
  "RUF100", # unused-noqa
  "RUF031", # incorrectly-parenthesized-tuple-in-subscript
  "PIE790", # unnecessary-placeholder
  "C403",   # unnecessary-list-comprehension-set
  "RUF046", # unnecessary-cast-to-int
  "RUF022", # unsorted-dunder-all
  "RUF010", # explicit-f-string-type-conversion
  "SIM118", # in-dict-keys
  "FURB152", # math-constant
  "Q003",   # avoidable-escaped-quote
  "Q001",   # bad-quotes-multiline-string
  "FURB101", # read-whole-file
  "FURB103", # write-whole-file
  "RUF019", # unnecessary-key-check
  "D401",   # non-imperative-mood
  "PLR1711", # useless-return
  "SIM103", # needless-bool
]
include = ["glitchygames/*.py", "tests/**/*.py", "scripts/**/*.py", "noxfile.py"]
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLR2004", "ANN", "ARG001", "ARG005", "PLC2701", "F841", "B007", "S101"
]
"glitchygames/tests/**/*.py" = [
    "PLR2004", "ANN", "ARG001", "ARG005", "PLC2701", "F841", "B007", "S101"
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
ignore-fully-untyped = false

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["glitchygames"]

[tool.pyright]
include = ["glitchygames", "tests", "scripts"]
exclude = [
    "**/__pycache__",
]
defineConstant = { DEBUG = true }
# stubPath = "src/stubs"

pythonVersion = "3.13"
pythonPlatform = "All"

executionEnvironments = [
  # { root = "src/web", pythonVersion = "3.5", pythonPlatform = "Windows", extraPaths = [ "src/service_libs" ] },
  # { root = "src/sdk", pythonVersion = "3.0", extraPaths = [ "src/backend" ] },
  # { root = "src/tests", extraPaths = ["src/tests/e2e", "src/sdk" ]},
  { root = "glitchygames", extraPaths = [ "scripts", "tests" ]}
]
# Re-enable these incrementally as type issues are fixed
reportMissingImports = "warning"
reportMissingTypeStubs = false
reportPossiblyUnboundVariable = "warning"
reportPrivateImportUsage = "warning"
reportRedeclaration = "warning"
# These remain disabled until targeted cleanup is done
reportAttributeAccessIssue = false
reportIncompatibleMethodOverride = false
reportReturnType = false
reportArgumentType = false
reportAbstractUsage = false
reportGeneralTypeIssues = false
reportOptionalMemberAccess = false
reportCallIssue = false
reportOptionalIterable = false
reportIncompatibleVariableOverride = false
reportOptionalSubscript = false
reportIndexIssue = false
reportAssignmentType = false
reportOperatorIssue = false
reportFunctionMemberAccess = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
