[project]
name = "glitchygames"
version = "1.0.0"
description = "Glitchy Games and Tools for Pygame and Python 3"
authors = [
  { name = "Terry Simons", email = "terry.simons@gmail.com" },
  { name = "Rich Saupe", email = "sabadam32@gmail.com" },
]
maintainers = [
  { name = "Terry Simons", email = "terry.simons@gmail.com" },
  { name = "Rich Saupe", email = "sabadam32@gmail.com" },
]
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.14,<4.0"
classifiers = [
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
]
keywords = ["pygame", "game-engine", "pixel-art", "sprite-editor"]
dependencies = [
  "tomli-w",
  "pygame-ce",
  "cookiecutter",
  "pyperclip",
  "aisuite[all]>=0.1.14",
  "numpy",
  "miniaudio",
  "speechrecognition",
  "bokeh",
  "backoff",
  "fastapi",
  "uvicorn",
  "pydantic",
  "httpx",
  "apng",
  "pillow",
  "deptry>=0.25.1",
  "vulture>=2.15",
  "pip-audit>=2.10.0",
  "hypothesis>=6.151.9",
  "taplo>=0.9.3",
  "yamllint>=1.38.0",
  "wily>=1.25.0",
  "hidapi>=0.15.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/terrysimons/glitchygames/issues/"
"Homepage" = "https://glitchygames.ai/"
"Documentation" = "https://glitchygames.ai/documentation/"
"Repository" = "https://github.com/terrysimons/glitchygames"

[project.scripts]
bitmappy = "glitchygames.bitmappy:main"
glitchygames-server = "glitchygames.api.main:run"
glitchygames-client = "glitchygames.api.client:run"
brave-adventurer = "glitchygames.examples.brave_adventurer:main"
brave-adventurer-papyrus = "glitchygames.examples.brave_adventurer_papyrus:main"
paddleslap = "glitchygames.examples.paddleslap:main"

[project.optional-dependencies]
docs = [
  "mkdocs",
  "mkdocstrings[crystal,python]",
  "mkdocs-material",
  "mkdocs-gen-files",
  "mkdocs-literate-nav",
  "mkdocs-section-index",
  "pymdown-extensions",
  "mkdocs-autorefs",
  "mkdocs-macros-plugin",
  "mkdocstrings-python",
]
dev = [
  "nox[uv]",
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "pytest-benchmark",
  "pytest-mock",
  "bandit",
  "safety",
  "ruff",
  "pre-commit",
  "basedpyright",
  "ty",
  "pillow",
  "pyinstaller",
]
api = []

[tool.hatch.build.targets.wheel]
packages = ["glitchygames"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Exclude examples directory from test collection
norecursedirs = [
  "examples",
  "build",
  "dist",
  "*.egg-info",
  ".git",
  ".hypothesis",
  "__pycache__",
]
addopts = "-n auto --cov=glitchygames --cov-fail-under=80 --log-cli-level=DEBUG --junitxml=test-results/junit.xml"
filterwarnings = [
  "error",
  # Third-party: speechrecognition depends on aifc, removed from stdlib in 3.13
  "ignore:aifc was removed:DeprecationWarning",
  # Third-party: docstring_parser uses deprecated ast nodes (via aisuite)
  "ignore:ast\\..* is deprecated:DeprecationWarning",
  # pytest-benchmark warns when xdist is active (benchmarks auto-disabled)
  "ignore:Benchmarks are automatically disabled:pytest_benchmark.logger.PytestBenchmarkWarning",
]
# Note: All tests run with no_unhandled_events=True to catch unhandled events as bugs

[tool.coverage.run]
source = ["glitchygames"]
branch = true
parallel = true
omit = [
  "*/tests/*",
  "*/examples/*",
  "*/build/*",
  "*/dist/*",
  "*/__pycache__/*",
  "*/migrations/*",
]

[tool.coverage.report]
show_missing = true

exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
  "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
preview = true
line-length = 100
output-format = "grouped"
src = ["glitchygames", "tests", "scripts"]
include = [
  "glitchygames/*.py",
  "tests/**/*.py",
  "scripts/**/*.py",
  "noxfile.py",
]
target-version = "py314"

[tool.ruff.lint]
task-tags = ["HACK", "TODO", "FIXME", "XXX", "NOTE", "BUG", "OPTIMIZE", "WIP"]
select = ["ALL"]
ignore = [
  # --- Previously ignored ---
  "COM812",  # Commented-out code is intentional for debugging and development
  "SLF001",  # Private member accessed (Needed for some annotations, like argparse._ArgumentGroup)
  "S311",    # Standard pseudo-random generators are not suitable for security/cryptographic purposes.
  "ISC002",  # Use of implicit string concatenation (this conflicts with ruff format)
  "CPY001",  # Missing copyright notice at top of file
  "ISC001",  # Use of implicit string concatenation (this conflicts with ruff format)
  "D203",    # Incorrect blank line before class (conflicts with D211)
  "D213",    # Multi-line summary second line (conflicts with D212)
  "PLC0415", # import-outside-top-level (intentional: circular imports, optional deps, platform-specific)
  "S101",    # assert is used intentionally for type narrowing and runtime invariant checks
  "ANN401",  # Any is needed for dynamic dispatch, loosely-typed game objects, and AI client APIs
  "PLR6301", # Method could be a function/staticmethod
  "G004",    # Logging statement uses f-string
  "EM101",   # Exception must not use a string literal, assign to variable first
  "EM102",   # Exception must not use an f-string literal, assign to variable first
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "PLR2004",
  "ANN",
  "ARG001",
  "ARG005",
  "PLC2701",
  "PLC2801", # Tests may call dunder methods directly to verify they work
  "D102",    # Test method names are self-documenting
  "DOC201",  # Test helper return docs unnecessary
  "RET504",  # Explicit assignment before return aids test readability
  "F841",
  "B007",
  "S101",
  "PT018",   # Compound assertions are acceptable in tests
  "RUF069",  # Exact float comparisons are intentional in property-based tests
  "B905",    # zip() without strict= is fine in tests
  "B002",    # False positive on double-negation test: -(-speed)
  "ARG002",  # Pytest fixtures are activated by parameter presence, not by direct use
]
"glitchygames/api/**/*.py" = [
  "RUF029", # FastAPI requires async def for route handlers even without await
]
"scripts/**/*.py" = [
  "TC003", # Scripts use stdlib imports at runtime, not just for type checking
]
"glitchygames/effects/easing.py" = [
  "DOC201",  # Easing functions are pure math; return type is obvious (float)
  "PLR2004", # Mathematical constants (0.5 midpoint, Penner coefficients) are standard
  "RUF069",  # Float equality (t == 0.0, t == 1.0) is intentional for Penner boundary conditions
]
"glitchygames/effects/tween.py" = [
  "PLR0913", # Tween.__init__ needs many parameters (target, property, start, end, duration, easing, etc.)
  "PLR0917", # Same as above -- many positional args are the natural API
]
"glitchygames/camera.py" = [
  "PLR0913", # Camera2D and ParallaxLayer constructors need many configuration params
]
"glitchygames/physics/body.py" = [
  "PLR0913", # PhysicsBody preset factory methods need many configuration params
  "PLR0917", # Same -- many positional args are the natural preset API
]
"glitchygames/animation/expressions.py" = [
  "DOC501",  # Expression parser raises ValueError by design; documenting every one is noise
  "PLR2004", # Token count checks use literal numbers (standard parser code)
  "S105",    # 'token' variable name triggers false positive for hardcoded password
  "ERA001",  # Comment about Phase 2 grammar looks like commented-out code
  "FBT001",  # LiteralExpr takes bool as positional (it's a value, not a flag)
]
"glitchygames/ui/menus.py" = [
  "PLR0913", # Menu constructors need geometry + identity + container params
]
"glitchygames/ui/text_widgets.py" = [
  "PLR0913", # Text widget constructors need geometry + font + style params
]
"glitchygames/ui/buttons.py" = [
  "PLR0913", # Button constructors need geometry + identity + callback params
]
"glitchygames/ui/inputs.py" = [
  "PLR0913", # Input/dialog constructors need geometry + callbacks + options params
]
"glitchygames/ui/sliders.py" = [
  "PLR0913", # Slider/color constructors need geometry + range + parent params
]
"glitchygames/ui/dialogs.py" = [
  "PLR0913", # Dialog constructors need scene, callbacks, options, and group params
]
"glitchygames/scenes/scene.py" = [
  "PLR0904", # Scene base class provides one handler method per pygame event type
]
"glitchygames/game_objects/ball.py" = [
  "PLR0913", # BallSprite constructor needs physics, speed, collision, and display params
]
"glitchygames/game_objects/paddle.py" = [
  "PLR0913", # Paddle constructors need geometry, speed, color, collision params
]
"glitchygames/examples/joystick_demo.py" = [
  "PLR0913", # Demo widget constructors follow standard UI geometry pattern
]
"glitchygames/examples/paddleslap.py" = [
  "PLR0913", # Game helper functions need ball geometry and physics params
]
"glitchygames/services/sprite_generation_service.py" = [
  "PLR0913", # Sprite generation needs provider, model, prompt, and dimension params
]

[tool.ruff.format]
docstring-code-format = true
quote-style = "single"
line-ending = "lf"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
ignore-fully-untyped = false

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["glitchygames"]

## basedpyright config lives in pyrightconfig.json (supports per-environment overrides)

## ty (Astral's type checker) configuration
[tool.ty.environment]
python-version = "3.14"
extra-paths = ["scripts"]

[tool.ty.src]
include = ["glitchygames", "scripts"]
# Tests excluded: ty doesn't understand pytest-mock's mocker.patch semantics,
# generating hundreds of false positives on mock attribute access and assignments.
exclude = ["tests", ".venv", ".nox"]

[tool.ty.rules]
# type: ignore comments are shared with basedpyright — don't flag them as unused
unused-type-ignore-comment = "ignore"

[tool.ty.terminal]
output-format = "full"
error-on-warning = false


[tool.bandit]
exclude_dirs = ["tests", "glitchygames/tests"]
# Filter to Medium+ severity and confidence to reduce noise.
# B101 (assert_used) is Low severity and gets filtered out by this.
# TODO: Replace remaining assert usage with explicit raises, then tighten to low/low
severity = "medium"
confidence = "medium"

[tool.deptry]
# pygame-ce installs as the 'pygame' module
package_module_name_map = { "pygame-ce" = "pygame" }

[tool.deptry.per_rule_ignores]
# numpy is used indirectly via pygame.surfarray (array3d/array4d) which requires it at runtime
# Dev/build/lint/docs tools are invoked via CLI, not imported in Python code
DEP002 = [
  "numpy",
  "deptry",
  "mkdocs",
  "mkdocstrings",
  "mkdocs-material",
  "mkdocs-literate-nav",
  "mkdocs-section-index",
  "pymdown-extensions",
  "mkdocs-autorefs",
  "mkdocs-macros-plugin",
  "mkdocstrings-python",
  "pytest-cov",
  "pytest-xdist",
  "pytest-benchmark",
  "pytest-mock",
  "bandit",
  "safety",
  "ruff",
  "pre-commit",
  "basedpyright",
  "ty",
  "pyinstaller",
  "vulture",
  "pip-audit",
  "hypothesis",
  "taplo",
  "yamllint",
  "wily",
]

[tool.uv]
# aisuite pins docstring-parser<0.16, but 0.16+ is needed for Python 3.14
# (ast.NameConstant removed). Override until aisuite loosens the pin.
override-dependencies = ["docstring-parser>=0.16"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
