[metadata]
name = ghettogames
version = 0.0.1
author = Terry Simons, Rich Saupe
author_email = terry.simons@gmail.com, sabadam32@gmail.com
description = Ghetto Games and Tools for Pygame and Python 3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/terrysimons/ghettogames
project_urls =
    Bug Tracker = https://github.com/terrysimons/ghettogames/issues
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = ghettogames
packages = find:
python_requires = >=3.7

[options.packages.find]
where = ghettogames
